<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.PedidoActivity">

    <TextView
        style="@style/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LABEL_addProduto" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FIELD_produto"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/spinnerProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/FIELD_qntd"
            android:textAlignment="center"
            android:textSize="20sp" />

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:descendantFocusability="blocksDescendants"
            android:focusable="false" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/btnRed"
            android:text="@string/RE_btnVoltar" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/btnGreen"
            android:text="@string/RE_btnEnviar" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGerenciamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/btnGreen"
        android:text="@string/FIELD_gerenciarProduto" />

</LinearLayout>