<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.ComandaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/LABEL_minhaComanda"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnAddProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        style="@style/btnGreen"
        android:text="@string/FIELD_addProduto" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        style="@style/btnRed"
        android:text="@string/FIELD_btnLimparLista" />

    <TextView
        android:id="@+id/tvValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lvComanda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

</LinearLayout>